@@ -5,6 +5,8 @@
 - [Redis] Load Databases - Amazon Elastic Cache - Redis #65
 - [Redis] TTL loop
 - [Memcached] TTL loop
+- [SSDB] expire, ttl commands
+- [SSDB] TTL loop
 
 1.1.1 / November 23, 2016
 [Alexandr Topilski]
